Fix design issues, redesign UI, add Dark mode

--- a/styles.css
+++ b/styles.css
@@ -16,24 +16,51 @@ body {
     width: 100vw;
     background-color: #dddddd;
     gap: 10px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    overflow: auto;
 }
 
 header {
-    height: 100px;
-    flex: 0 0 fit-content;
+    height: 20vh;
+    flex: 0 0 auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    font-size: calc(1px + 2.5vw);
+    font-size: calc(1.5vw + 0.5vh);
+    font-weight: 800;
     padding: 20px;
     flex-wrap: nowrap;
+    gap: 30px;
+    width: 100%;
+    margin: auto;
+    margin-top: 20px;
 }
 
+#heroHeading {
+    text-align: center;
+    margin: auto;
+}
+/* 
 h1 {
     text-align: center;
+} */
+#alignmentDiv, #modeToggle {
+    min-width: 2vw;
+    display: flex;
+    /* min-height: 10vh; */
+    aspect-ratio: 1 / 1;
+    width : 5vh;
+    font-size: calc(1vw + 0.25vh);
+    align-items: center;
+    justify-content: center;    
 }
+
+#modeToggle {
+    border: 3px solid #111720;
+    border-radius: 1.5vh;
+}
+
 
 #main {
     flex: 1 1 100px;
@@ -43,19 +70,54 @@ h1 {
     align-items: center;
 }
 
+.light {
+    color: #18202c;
+    background-color: #dddddd;
+}
+
+.dark {
+    color: #ffffff;
+    background-color: #111720;
+}
+
+.lightContainer {
+    color: #fafafa;
+}
+
+.darkContainer {
+    color: #aaaaaa;
+}
+
 #subMain {
     flex: 0 0 100%;
     display: flex;
-    align-items: center;
     flex-flow: column nowrap;
     width: 70vw;
     height: 100%;;
     gap: 10px;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
+    min-width: 200px;
+    overflow:visible;
+}
+
+#subMain > div {
+    flex-shrink: 1;
+    height: auto;
+    min-width: min-content;
 }
 
 #roundNumber {
-    font-size: calc(1px + 1vw);
+    font-size: calc(0.8vw + 1vh);
+    opacity: 60%;
+}
+
+#infoLabel {
+    display: flex;
+    justify-content: center;
+    opacity: 50%;
+    font-weight: 1000;
+    font-size: calc(1.5vw + 1.5vh);
 }
 
 #scoreLabels {
@@ -63,17 +125,13 @@ h1 {
     flex-flow: row nowrap;
     justify-content: space-evenly;
     align-items: center;
-    font-size: calc(18px + 2vw);
-    color: #33333350;
-    flex: 0 1 20%;
+    font-size: calc(18px + 2.5vw + 1vh);
+    /* color: #33333350; */
+    flex: 0 1 auto;
     width: 100%;
     padding: 10px;
 }
 
-#playerScore, #computerScore {
-    width: 20%;
-    text-align: center;
-}
 
 #choiceLabels {
     display: flex;
@@ -86,34 +144,70 @@ h1 {
 }
 
 #playerLabel, #computerLabel {
-    font-size: calc(3px + 2vw);
+    font-size: calc(2px + 1vw + 0.5vh);
+    font-weight: 700;
     height: fit-content;
     width: 15vw;
     text-align: center;
-    color: #00000090;
+    filter: contrast(30%);
 }
 
 #choiceDisplay{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
-    align-items: center;
-    flex: 1 1 250px;
+    align-items: flex-start;
+    flex: 0 1 auto;
     width: 100%;
     padding: 10px;
     gap: 10px;
+    min-height: 20vh;
+}
+
+#playerScore, #computerScore {
+    display: flex;
+    width: 3vw;
+    flex: 0 1 auto;
+    text-align: center;
+    align-self: center;
+    justify-content: center;
+    font-size: calc(2vw + 3vh);
+    opacity: 50%;
+}
+
+.displayContainer {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    padding: 1%;
+    /* background-color: #fafafa; */
+    filter: contrast(50%) brightness(70%);
+    border-radius: 6%;
+    max-width: calc(20vh + 2%);
+}
+
+.lightContainer {
+    background-color: #fafafa;
+}
+
+.darkContainer {
+    background-color: #1f2939;
 }
 
 #playerChoice, #computerChoice {
-    max-width: 200px;
-    max-height: 200px;
+    
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 100px;
-    color: #00000080;
-    flex: 0 1 60%;
+    font-size: calc(10px + 2.5vw + 5vh);
+    flex: 0 1 auto;
     aspect-ratio: 1 / 1;
+    /* height: 20vh; */
+    width: 20vw;
+    min-width: 100px;
+    max-height: 20vh;
+    max-width: 20vh;
 }
 
 #playerOptions {
@@ -121,14 +215,16 @@ h1 {
     min-width: 100%;
     flex-flow: row nowrap;
     gap : 10px;
+    padding: 0 18%;
     justify-content: space-evenly;
     align-items: center;
-    flex: 1 1 250px;
+    flex: 0 1 auto;
+    width: 100%;
 }
 
 #playerOptions > div {
-    background-color: #fafafa;
-    padding: 20px;
+    /* background-color: #fafafa; */
+    padding: 2%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -139,61 +235,53 @@ h1 {
     flex: 0 1 60%;
     max-height: 200px;
     max-width: 200px;
+    transition: background-color 0.3s, box-shadow 0.3s;
 }
 
-.choiceIcons {
+#playerOptions > div:hover {
+    box-shadow: 5px 4px 5px #11111150; 
+    background-color: #fcfcfc;
+    transition: 0.3s;
+}
+
+#playerOptions > div:active {
+    box-shadow: 1px 0 2px #11111150;
+    filter: brightness(96%);
+    transition: 0.15s;
+}
+
+#playerOptions > div.darkContainer:hover {
+    box-shadow: 5px 4px 5px #000011;
+    background-color: #232e41;
+    transition: 0.3s;
+}
+
+#playerOptions > div.darkContainer:active {
+    box-sizing: 1px 0 2px #000011;
+    background-color: #19212e;
+    transition: 0.15s;
+
+}
+
+.svgLight {
+    fill: #080b0f;
+}
+
+.svgDark {
+    fill: #eeeeee;
+}
+
+.choiceIcon {
     flex: 1 1 auto;
     height: 70%;
     width: 70%;
+    filter: contrast(10%) brightness(100%);
 }
 
-.overlay {
-    display: none;
-}
-
-#overlay {
-    position: fixed;
-    background-color: #00000050;
-    height: 100vh;
-    width: 100vw;
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.gameOverModal {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333333;
-    padding: 1.5%;  
-    width: 20vw;
-    min-width: max-content;
-    aspect-ratio: 5/3;
-    border-radius: 20px;
-    box-shadow: 7px 7px 3px #33333366;
-    align-self: center;
-
-}
-
-#gameOverText {
-    font-size: 2.5rem;
-    font-weight: 500;
-    padding: 10px;
-}
-
-#gameOverModalButton {
-    height: 30%;
-    width: 30%;
-    background-color: rgb(129, 211, 238);
-    border-radius: 10px;
-    box-shadow: 0px 0px 5px #232323;
-}
 
 footer {
     display: flex;
+    flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
     height: 50px;
@@ -204,3 +292,73 @@ footer {
     flex-flow: row nowrap;
     gap: 10px;
 }
+
+.overlayHide {
+    display: none;
+}
+
+.overlayShow {
+    display: flex;
+}
+
+/* .overlay {
+    display: none;
+} */
+
+#overlay {
+    position: fixed;
+    background-color: #11172090;
+    height: 100vh;
+    width: 100vw;
+    z-index: 2;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+
+}
+
+.gameOverModal {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #313d50;
+    padding: calc(1vw + 1vh);  
+    width: 20vw;
+    min-width: 200px;
+    max-width: 300px;
+    aspect-ratio: 5/3;
+    border-radius: calc(0.5vh + 1vw);
+    box-shadow: 7px 7px 3px #313d5066;
+    font-size:  30px;
+    font-weight: 500;
+}
+
+#gameOverText {
+    padding: 5%;
+}
+
+#gameOverModalButton {
+    height: 30%;
+    width: 30%;
+    background-color: rgb(129, 211, 238);
+    border-radius: calc(0.25vh + 0.5vw);
+    box-shadow: 1px 2px 4px #232323;
+    font-size: 20px;
+    font-weight: 700;
+    justify-self: baseline;
+    transition: box-shadow 0.3s background-color 0.3s;
+}
+
+#gameOverModalButton:hover {
+    background-color: rgb(125, 213, 243);
+    box-shadow: 3px 5px 4px #232323;
+    transition: 0.3s;
+}
+
+#gameOverModalButton:active {
+    background-color: rgb(110, 186, 211);
+    box-shadow: 0px 1px 2px #232323;
+    transition: 0.3s;
+}
+
